--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
             <h3 class="subhead">-veterinaryclinic</h3>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Doctors</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li>Home</li>
+                    <li>Services</li>
+                    <li>Doctors</li>
+                    <li>About</li>
+                    <li>Contact</li>
                 </ul>
             </nav>
+            <div class="image">
+                <img src="/images/vet2webp" alt="">
+            </div>
 
         </div>
 
@@ -118,17 +121,34 @@
         </section>
 
 
+       <section>
+            <div class="doctors">
+               <h2>Our High Qualified veterinarians</h2>
+            </div>
+            <div class="doc-img">
+                <div class="imag1">
+                    <img src="/images/vet4.jpeg">
+                    <p>Dr Neil Human Pascal</p>
+                    <p>Expert veterinarian</p>
+                </div>
 
+                <div class="imag2">
+                    <img src="/images/vet3.jpeg">
+                </div>
+                <div class="par">
+                    <p>Dr Emanuela Belivea</p>
+                    <p>Expert veterinarian</p>
+                </div>
 
-        <div class="doctors">
-            <h2>Our High Qualified veterinarians</h2>
-            <div class="imgs">
-                <imgs src="images/doctor1-removebg-preview (1).png">
-                    <imgs SRC="/doctor1-removebg-preview (1).png">
-                        <imgs SRC="/doctor1-removebg-preview (1).png">
+                <div class="imag3">
+                    <img src="/images/vet5.jpeg">
+                    <p>Dr Patric Samuel Neal</p>
+                    <p>Expert veterinarian</p>
+                </div>
 
             </div>
-        </div>
+        </section>
+
         </section4>
         <div class="blog">
             <h2>Subscribe to Our Blog</h2>
